--- a/api.env
+++ b/api.env
@@ -2,16 +2,16 @@ APP_NAME=Interpretabble
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost:8001
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=interpretable-test
-DB_USERNAME=yassin
-DB_PASSWORD=autobot3000
+DB_DATABASE=interpretable
+DB_USERNAME=root
+DB_PASSWORD=erasme
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
