--- a/front.env
+++ b/front.env
@@ -2,7 +2,7 @@ APP_NAME=Front
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost:8001
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
@@ -14,7 +14,7 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 
-API_URL=http://localhost/interpretable/interpretabble-api/public/
+API_URL=http://localhost/interpretabble-api/public/
 
 
 BROADCAST_DRIVER=log
