env => api url  update

--- a/front.env
+++ b/front.env
@@ -14,7 +14,7 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 
-API_URL=http://localhost/interpretabble-api/public/
+API_URL=http://localhost/api/public/
 
 
 BROADCAST_DRIVER=log
