--- a/config/interpretable.service
+++ b/config/interpretable.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Dummy Service
+Description=Interpretable shutdown listenner
 After=multi-user.target
 Conflicts=getty@tty1.service
 
